# codepad

./: .gitignore  README.md  fix_icons.py  index.html  package-lock.json  package.json  vite.config.js
src/: fileops.js  keybindings.js  main.js  store.js  tabs.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/editor/: index.js  languages.js  themes.js
src/styles/: main.css
