[package]
name = "codepad"
version = "0.1.0"
description = "A lightweight code editor. Fast, beautiful, nothing you don't need."
authors = ["you"]
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.7", features = [
    "dialog-open",
    "dialog-save",
    "fs-read-file",
    "fs-write-file",
    "window-all",
    "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"      # Optimize for binary size
lto = true           # Link-time optimization
codegen-units = 1    # Maximize optimization (slower compile, smaller/faster binary)
panic = "abort"      # Remove panic unwinding machinery
strip = true         # Strip symbols from binary
